--- a/client-config.yml
+++ b/client-config.yml
@@ -3,6 +3,8 @@ spring:
     active: dev
 
 ---
+server:
+  port: 8201
 spring:
   profiles: dev
   application:
@@ -15,6 +17,8 @@ eureka:
 
 ---
 
+server:
+  port: 8202
 spring:
   profiles: test
   application:
